Fixed link problem

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Style -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Cena Angolana</title>
 </head>
 
@@ -49,7 +49,7 @@
             </div>
             <div class="col50">
                 <div class="imgBox">
-                    <img src="/assets/img/img1.jpg" alt="">
+                    <img src="./assets/img/img1.jpg" alt="">
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu1.jpg" alt="">
+                    <img src="./assets/img/menu1.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Riso con pesce e platano</h3>
@@ -72,7 +72,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu2.jpg" alt="">
+                    <img src="./assets/img/menu2.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Calulu di Persico</h3>
@@ -80,7 +80,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu3.jpg" alt="">
+                    <img src="./assets/img/menu3.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Cocada Amarela</h3>
@@ -88,7 +88,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu4.jpg" alt="">
+                    <img src="./assets/img/menu4.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Carne con verdure</h3>
@@ -96,7 +96,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu5.jpg" alt="">
+                    <img src="./assets/img/menu5.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Insalate Speciali</h3>
@@ -104,7 +104,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/menu6.jpg" alt="">
+                    <img src="./assets/img/menu6.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Mufete</h3>
@@ -125,7 +125,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/expert1.jpg" alt="">
+                    <img src="./assets/img/expert1.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Elizabeth Martins</h3>
@@ -133,7 +133,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/expert2.jpg" alt="">
+                    <img src="./assets/img/expert2.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Stefan Domingos</h3>
@@ -141,7 +141,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/expert3.jpg" alt="">
+                    <img src="./assets/img/expert3.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Silvia Rocha</h3>
@@ -149,7 +149,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/expert4.jpg" alt="">
+                    <img src="./assets/img/expert4.jpg" alt="">
                 </div>
                 <div class="text">
                     <h3>Ricardo Helton</h3>
@@ -167,7 +167,7 @@
         <div class="content">
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/testimone1.jpg" alt="">
+                    <img src="./assets/img/testimone1.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione assumenda harum possimus laborum voluptatem adipisci ipsa non iste dicta quisquam dolores fugit, sunt id, animi quam facilis nobis, magnam doloribus!</p>
@@ -176,7 +176,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/testimone2.jpg" alt="">
+                    <img src="./assets/img/testimone2.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione assumenda harum possimus laborum voluptatem adipisci ipsa non iste dicta quisquam dolores fugit, sunt id, animi quam facilis nobis, magnam doloribus!</p>
@@ -185,7 +185,7 @@
             </div>
             <div class="box">
                 <div class="imgBox">
-                    <img src="/assets/img/testimone3.jpg" alt="">
+                    <img src="./assets/img/testimone3.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione assumenda harum possimus laborum voluptatem adipisci ipsa non iste dicta quisquam dolores fugit, sunt id, animi quam facilis nobis, magnam doloribus!</p>
@@ -223,7 +223,7 @@
         <p>Copyright 2022 <a href="#">Jose Antonio</a>. All right Reserved</p>
     </div>
 
-    <script src="/assets/script/main.js"></script>
+    <script src="./assets/script/main.js"></script>
 </body>
 
 </html>
